# lean-interp

./: .gitignore  ProjectUpdate.md  README.md  calculate_baselines.py  config.py  convert_states_jsonl_to_gold.py  extract_activations.py  extract_data.py  features.py  gold_dataset.json  loader.py  main.py  model.py  planLinearProbe.prompt.md  probe.py  pyproject.toml  state_sample_generator.py
TheGeometryOfFormalLogic/: calculate_baselines.py  config.py  convert_states_jsonl_to_gold.py  extract_activations.py  extract_data.py  lean_labeler.py  loader.py  main.py  model.py  state_sample_generator.py
data/: README.md
data/results/: probe_results_control.json  probe_results_production.json  probe_results_tester.json
docs/: ProjectUpdate.md
