[project]
name = "thegeometryofformallogic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "lean-dojo-v2>=1.0.8",
    "pantograph",
    "transformer-lens>=2.18.0",
]

[tool.uv.sources]
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph" }
